fixed sizing issue with new main image which overlapped with text on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,9 @@ html,body {
     max-height: 100%;
     max-width: 100%;
 }
-
+.inline {
+    display: inline-block;
+}
 #logo {
     height: 10em;
     width: 10em;
